# micro-task

./: .dockerignore  .gitignore  README.md  docker-compose.yml
worker/: Dockerfile  pyproject.toml  pytest.ini
worker/tests/: api_tests.py  conftest.py  redisio_tests.py
worker/worker/: log.py  main.py  redis_connection.py  redisio.py  schemas.py  settings.py
