[tool.poetry]
name = "worker"
version = "0.1.0"
description = ""
authors = ["Titov Anton <webdev@titovanton.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.100.0"}
redis = "^4.6.0"
loguru = "^0.7.0"
uuid6 = "^2023.5.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
flake8 = "^6.0.0"
mypy = "^1.4.1"
faker = "^19.2.0"
types-redis = "^4.6.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
